--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
-steps:
-  - name: 'maven'
-    entrypoint: 'mvn'
-    args: ['clean', 'install', '-DskipTests']
+#steps:
+#  - name: 'maven'
+#    entrypoint: 'mvn'
+#    args: ['clean', 'install', '-DskipTests']
   #https://cloud.google.com/build/docs/cloud-builders
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
@@ -10,17 +10,17 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA']
   # Deploy container image to Cloud Run
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
-    args:
-      - 'run'
-      - 'deploy'
-      - '$_SERVICE_NAME'
-      - '--image'
-      - 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA'
-      - '--region'
-      - '$_DEPLOY_REGION'
-options:
-  logging: CLOUD_LOGGING_ONLY
+#  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+#    entrypoint: gcloud
+#    args:
+#      - 'run'
+#      - 'deploy'
+#      - '$_SERVICE_NAME'
+#      - '--image'
+#      - 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA'
+#      - '--region'
+#      - '$_DEPLOY_REGION'
+#options:
+#  logging: CLOUD_LOGGING_ONLY
 
-images: [gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA]
+#images: [gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA]
