--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,8 @@
-#steps:
+steps:
 #  - name: 'maven'
 #    entrypoint: 'mvn'
 #    args: ['clean', 'install', '-DskipTests']
-  #https://cloud.google.com/build/docs/cloud-builders
+  https://cloud.google.com/build/docs/cloud-builders
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA', '.']
@@ -23,4 +23,4 @@
 #options:
 #  logging: CLOUD_LOGGING_ONLY
 
-#images: [gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA]
+images: [gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA]
