--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,8 @@
 steps:
-  - name: 'maven'
-    entrypoint: 'mvn'
-    args: ['clean', 'install', '-DskipTests']
-  https://cloud.google.com/build/docs/cloud-builders
+#  - name: 'maven'
+#    entrypoint: 'mvn'
+#    args: ['clean', 'install', '-DskipTests']
+  #https://cloud.google.com/build/docs/cloud-builders
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA', '.']
@@ -20,7 +20,7 @@ steps:
 #      - 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA'
 #      - '--region'
 #      - '$_DEPLOY_REGION'
-#options:
-#  logging: CLOUD_LOGGING_ONLY
+options:
+  logging: CLOUD_LOGGING_ONLY
 
 images: [gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA]
