--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,25 +1,7 @@
 steps:
-#  - name: 'maven'
-#    entrypoint: 'mvn'
-#    args: ['clean', 'install', '-DskipTests']
-  #https://cloud.google.com/build/docs/cloud-builders
-  # Build the container image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA', '.']
-  # Push the container image to Container Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA']
-  # Deploy container image to Cloud Run
-#  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-#    entrypoint: gcloud
-#    args:
-#      - 'run'
-#      - 'deploy'
-#      - '$_SERVICE_NAME'
-#      - '--image'
-#      - 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA'
-#      - '--region'
-#      - '$_DEPLOY_REGION'
+- name: 'hello-world'
+  args: ['echo', 'Hello World!']
+
 options:
   logging: CLOUD_LOGGING_ONLY
 
